kubernetes/redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-master
  labels:
    app: redis
    role: master
    tier: backend
spec:
  ports:
  - port: 6379
    targetPort: 6379
  selector:
    app: redis
    role: master
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: StatefulSet
metadata:
  name: redis-master
  labels:
    app: redis
spec:
  selector:
    matchLabels:
      app: redis
      role: master
      tier: backend
  serviceName: "redis"
  replicas: 1
  volumeClaimTemplates:
  - metadata:
      name: redis-pvc
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 10Mi
  template:
    metadata:
      labels:
        app: redis
        role: master
        tier: backend
    spec:
      containers:
      - name: master
        image: redis:6-alpine
        command: ["redis-server", "--appendonly", "yes"]
        volumeMounts:
        - name: redis-pvc
          mountPath: "/data"
        resources:
          requests:
            cpu: 25m
            memory: 15Mi
        ports:
        - containerPort: 6379
