kubernetes/deployment.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dt-spotify-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - dtspotify.shapingideas.fyi
    secretName: letsencrypt-prod
  rules:
  - host: dtspotify.shapingideas.fyi
    http:
      paths:
      - backend:
          serviceName: dt-spotify
          servicePort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: dt-spotify
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: dt-spotify
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dt-spotify
spec:
  selector:
    matchLabels:
      app: dt-spotify
  replicas: 2
  template:
    metadata:
      labels:
        app: dt-spotify
    spec:
      containers:
      - name: dtspotify
        image: wearebrews/dtspotify:dev
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
